# talloc-visualization

./: .gitignore  .gitmodules  COPYING
backend/: CMakeLists.txt  backend.kdev4
backend/.kdev4/: backend.kdev4
backend/examples/: CMakeLists.txt
backend/examples/talloc_server/: CMakeLists.txt  main.c
backend/examples/websocket/: CMakeLists.txt  certificate.cfg  main.c
backend/src/: CMakeLists.txt
backend/src/talloc_visualization/: CMakeLists.txt  epoll.c  epoll.h  events.c  events.h  handshake.c  handshake.h  process.c  process.h  socket.c  socket.h  talloc_events.c  talloc_events.h  timer.c  timer.h
backend/src/talloc_visualization/utils/: CMakeLists.txt  list.c  list.h
frontend/: Gemfile  config.rb
frontend/source/javascripts/: all.js  main.js
frontend/source/javascripts/core/: canvas.js  nodes.js  scenario.js  socket.js
frontend/source/layouts/: layout.haml
frontend/source/stylesheets/: all.sass
